# blog

./: .dockerignore  .firebaserc  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile.toml  README.md  blog.config.exemple.toml  blog.config.local.toml  docker-compose.build.yaml  docker-compose.colify.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  firebase.json  package-lock.json  sitemap.xml  tailwind.config.js  todos.txt
.cargo/: config.docker.toml  config.toml  config_exemple.toml
assets/: input.css  output.css  theme.js
blogpost/: 1.md  how-connect-rust-to-firestore-database.md  how-continuous-deploy-with-dockerfile-and-github-in-gcp.md  how-host-a-rust-server-in-gcp.md  how_axum_works_and_what_it_can_do.md  how_properly_add_tailwind_css_to_a_rust_production_code.md  how_to_properly_setup_a_rust_project.md  how_use_axum_askama_htmx.md  software-is-a-living-thing-kill-it-when-necessary  test-markdown-2.md  test-markdown.md  test-owned-markdown.md  test.md  what_are_axum_askama_htmx_and_why_use_it.md  what_askama_can_do.md  what_htmx_can_do.md  why_js_devs_are_migrating_from_js_to_rust.md
data/: blog.sqlite
invisible-matrix/: test-owned-markdown.md  why-seo-is-critical-for-e-commerce-success-tips-and-best-practices.md
migrations/: V1__initial.sql  V2__create_users_table.sql  V3__add_column_posts.sql  V3__create_blog_table.sql
src/: app.rs  config.rs  error.rs  lib.rs  main.rs
src/app/: mod.rs
src/config/: application.rs  blog.rs  database.rs  environment.rs  mod.rs  tracing.rs
src/config/initializers/: logging.rs
src/controller/: blog.rs  mod.rs
src/i18n/: mod.rs
src/model/: markdown.rs  mock.rs  mod.rs  sqlite.rs
src/state/: mock.rs  mod.rs
src/view/: blog.rs  home.rs  mod.rs
templates/: blog.html  blogcard.html  blogposts.html  footer.html  header.html  intro.html  root.html
