[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
dotenv = "0.15.0"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = { version = "0.7.4", features = ["form", "macros"] }
thiserror = "1.0.57"
tower-http = { version = "0.5.2", features = ["fs"] }
axum-macros = "0.4.1"
serde = "1.0.197"
async-trait = "0.1.77"
pulldown-cmark = "0.10.0"
yaml-front-matter = "0.1.0"
regex = "1.10.3"
firestore = "0.37.5"
tokio-stream = "0.1.15"
futures = "0.3.30"
anyhow = "1.0.93"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-rustls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
